--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
+    "url": "git+https://github.com/MrPaul007/goit-js-hw-12-countries"
   },
   "keywords": [],
-  "author": "Mr. Paul Pryidun",
+  "author": "Pavlo Pr",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://MrPaul007.github.io/goit-js-hw-12-countries",
+  "homepage": "https://mrpaul007.github.io/goit-js-hw-12-countries",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
